--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@firebase/app": "^0.9.4",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@tanstack/react-query": "^4.28.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
