--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@uiw/react-color": "^1.1.3",
     "@uiw/react-color-compact": "^1.1.2",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
