--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "firebase": "^9.18.0",
+    "install": "^0.13.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,8 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
