--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
+    "framer-motion": "^10.12.10",
     "install": "^0.13.0",
+    "jszip": "^3.10.1",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
