--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
+    "react-toggle": "^4.1.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
     "swiper": "^9.3.2",
